# jemallocator

./: Cargo.toml  rustfmt.toml
ci/: dox.sh  run.sh
jemalloc-sys/: Cargo.toml
jemalloc-sys/tests/: unprefixed_malloc.rs
jemallocator/: Cargo.toml  README.md
jemallocator/benches/: roundtrip.rs
jemallocator/src/: allocator.rs  global_alloc.rs  lib.rs
jemallocator/src/ctl/: error.rs  keys.rs  macros.rs  mod.rs  raw.rs  stats.rs  stats_print.rs  thread.rs
jemallocator/tests/: background_thread_defaults.rs  ffi.rs  grow_in_place.rs  malloctl.rs  shrink_in_place.rs  smoke.rs
