[package]
name = "tikv-jemallocator"
# Make sure to update the version in the README as well:
version = "0.6.0"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>",
    "Simon Sapin <simon.sapin@exyr.org>",
    "Steven Fackler <sfackler@gmail.com>",
    "The TiKV Project Developers",
    "Jason Volk <jason@zemos.net>",
    "June August <june@girlboss.ceo>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["allocator", "jemalloc"]
categories = ["memory-management", "api-bindings"]
repository = "https://github.com/matrix-construct/jemallocator"
homepage = "https://github.com/matrix-construct/jemallocator"
documentation = "https://matrix-construct.github.io/jemallocator"
description = """
A Rust allocator backed by jemalloc
"""
edition = "2018"

[lib]
test = false
bench = false

[[test]]
name = "ffi"
required-features = ["stats"]

[dependencies]
tikv-jemalloc-sys = { path = "../jemalloc-sys", version = "0.6.0", default-features = false }
libc = { version = "^0.2", default-features = false }
paste = "1"

[features]
default = ["background_threads_runtime_support"]
api = [] #TODO: hasn't been updated since 2015
profiling = ["tikv-jemalloc-sys/profiling"]
debug = ["tikv-jemalloc-sys/debug"]
stats = ["tikv-jemalloc-sys/stats"]
fill = ["tikv-jemalloc-sys/fill"]
background_threads_runtime_support = ["tikv-jemalloc-sys/background_threads_runtime_support"]
background_threads = ["tikv-jemalloc-sys/background_threads"]
unprefixed_malloc_on_supported_platforms = ["tikv-jemalloc-sys/unprefixed_malloc_on_supported_platforms"]
disable_initial_exec_tls = ["tikv-jemalloc-sys/disable_initial_exec_tls"]
disable_cache_oblivious = ["tikv-jemalloc-sys/disable_cache_oblivious"]
global_hooks = []

[package.metadata.docs.rs]
features = []
rustdoc-args = [ "--cfg", "jemallocator_docs" ]

[lints.rust]
unexpected_cfgs = "allow"
